--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -289,7 +289,7 @@ app:
       equipments: Biblio et ressources
       information: Informations pratiques
       closing_remarks: Le mot de la fin
-      student_view: Syllabus étudiant
+      student_view: Syllabus complet
       student_view_web: Syllabus web
       help: Aide
   dashboard:
@@ -299,7 +299,7 @@ app:
     card:
       publish_syllabus: Publier le syllabus
       publish_success: Bravo le syllabus a été publié
-      see_student: Voir le syllabus étudiant
+      see_student: Voir le syllabus complet
       see_web: Voir le syllabus web
       duplicate_syllabus: Je souhaite que ce syllabus soit copié à la fin de l'année universitaire sur le cours de l'année prochaine
       duplicate_syllabus_additionnal: (attention, si le code Apogée du cours change, utilisez le bouton dupliquer sur un autre cours)
@@ -518,7 +518,7 @@ app:
         levels: Niveau du cours
         description: Description
         level_label: Quel est le niveau de ce cours ?
-        media_label: "Personnalisez votre syllabus avec une image/vidéo personnelle ou avec le logo de votre campus/EUR (<a target='_blank' href='https://intranet.univ-cotedazur.fr/infos-pratiques/communication-et-impression/charte-et-papeterie?ksession=6aa48cc4-9062-4dcc-84da-fdf2a6ef6719'>ici</a>) ou libre de droits (ex: https://pixabay.com)."
+        media_label: "Personnalisez votre syllabus avec une image/vidéo personnelle ou avec le logo de votre campus/EUR (<a target='_blank' href='https://intranet.univ-cotedazur.fr/infos-pratiques/communication-et-impression/charte-et-papeterie?ksession=6aa48cc4-9062-4dcc-84da-fdf2a6ef6719'>voir ici</a>) ou libre de droits (ex: https://pixabay.com)."
         picture: Image
         video: Vidéo
         file_type: Fichier de type jpeg ou png (2Mo maximum)
@@ -649,7 +649,7 @@ app:
         tutoring_by_both: avec un tuteur enseignant et/ou étudiant
         empty_tutoring_resources: Pas de remise à niveau
       presentation:
-        support_for_success: Soutiens à la réussite
+        support_for_success: Soutien à la réussite
         last_update: Dernière mis à jour
         not_published: Ce syllabus n'a pas encore été publié
         structure: Composante
