--- a/translations/messages.fr.yml
+++ b/translations/messages.fr.yml
@@ -845,7 +845,7 @@ app:
     activities:
       description_empty: Aucune description
     presentation:
-      code_ecue: "Code de l'ECUE : "
+      code_ecue: "Code de l'%type% : "
       distant: Volume horaire à distance
       class: Volume horaire en présentiel
       teachers: Responsable(s) du cours
